RESOLVED FIXED39835
[Chromium] Default popup window size should not depend on zoom level
https://bugs.webkit.org/show_bug.cgi?id=39835
Summary [Chromium] Default popup window size should not depend on zoom level
Hans Wennborg
Reported 2010-05-27 07:06:07 PDT
Created attachment 57238 [details] Test page When doing a call to window.open() without passing arguments for the window size, the size gets influenced by the zoom level of the current window. For example, see the attached test page: First, try clicking the "my popup" link without zooming. Then, close the popup, zoom in a couple of steps, and click the link again. Notice how the popup is much smaller this time. (See also http://crbug.com/45167).
Attachments
Test page (359 bytes, text/html)
2010-05-27 07:06 PDT, Hans Wennborg
no flags
Patch (2.44 KB, patch)
2010-05-27 07:26 PDT, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2010-05-27 07:26:29 PDT
Jeremy Orlow
Comment 2 2010-05-27 07:37:06 PDT
r=me
WebKit Commit Bot
Comment 3 2010-05-27 14:57:25 PDT
Comment on attachment 57241 [details] Patch Clearing flags on attachment: 57241 Committed r60324: <http://trac.webkit.org/changeset/60324>
WebKit Commit Bot
Comment 4 2010-05-27 14:57:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.